2009-04-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c, ext/oci8/lob.c, ext/oci8/metadata.c,
	  ext/oci8/oci8.c: suppress "warning C4761: integral size mismatch
	  in argument; conversion supplied" when compiled by Visual C++.

2009-04-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/env.c, ext/oci8/extconf.rb,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c: OCIEnv is initialized
	    when it is needed. This makes a basis to enable an event
	    notification after "require 'oci8'."
	* test/test_all.rb: fix a bug added four days ago.

2009-04-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/oci8lib.c, ext/oci8/ocinumber.c,
	  ext/oci8/metadata.c, ext/oci8/object.c: pass an OCIError to
	    OraNumber functions if it can. (This is the first step to
	    delay OCIEnv initialization.)

2009-04-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Gets ORACLE_HOME from the Windows regitry
	    by enumerating subkeys of \\HKEY_LOCAL_MACHINE\SOFTWARE\ORACLE.

2009-04-12  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, test/test_encoding.rb: The string bind length should
	    be got from the string bytesize converted to OCI8.encoding.

2009-04-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: OCI8::BLOB#read should return ASCII-8BIT.
	    OCI8::BLOB#write should not convert the specified string
	    to OCI8.encoding.
	* test/test_dbi.rb: suppress warning: "shadowing outer local
	    variable - i"
	* test/test_all.rb, test/test_encoding.rb: add string encoding
	    tests.

2009-04-12  KUBO Takehiro  <kubo@jiubao.org>
	* lib/dbd/OCI8.rb: fix DBI::DBD::OCI8::BindType::DBIStatementHandle
	    to pass a newly added sanity check in dbi 0.4.1.
	    (reported by Dirk Herzhauser)
	* test/test_all.rb: fix to use dbi installed as a rubygem.

2009-04-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: fix an error when executing "select NULL from dual".